fix: display on mobile

--- a/frontend/src/components/addNote/AddNote.module.css
+++ b/frontend/src/components/addNote/AddNote.module.css
@@ -33,10 +33,3 @@
   justify-content: right;
   align-items: right;
 }
-
-@media screen and (max-width: 768px) {
-  .formContainer {
-    width: 90vw;
-    height: 80vh;
-  }
-}
